fix: [CDNG-4752]: fix overflow issue (#1832)
* fix: [CDNG-4752]: fix overflow issue

* fix: snapshot updated

--- a/src/modules/70-pipeline/components/ManifestSelection/ManifestSelection.module.scss
+++ b/src/modules/70-pipeline/components/ManifestSelection/ManifestSelection.module.scss
@@ -65,3 +65,14 @@ div.server {
     padding-bottom: var(--spacing-medium);
   }
 }
+
+.crossIcon {
+  position: absolute;
+  right: var(--spacing-large);
+  top: var(--spacing-large);
+}
+
+.createConnectorWizard {
+  flex-grow: 1;
+  display: flex;
+}
