--- a/src/modules/70-pipeline/components/ManifestSelection/ManifestWizard/ManifestWizard.module.scss
+++ b/src/modules/70-pipeline/components/ManifestSelection/ManifestWizard/ManifestWizard.module.scss
@@ -1,9 +1,5 @@
 .manifestWizard {
-  position: absolute;
-  top: 0;
-  height: 100%;
   width: 100%;
-  overflow: auto;
 
   [class*='stepDetails'] {
     background-color: var(--white) !important;
