--- a/src/modules/70-pipeline/components/connectors/GitConnector/CreateGitConnector.module.scss
+++ b/src/modules/70-pipeline/components/connectors/GitConnector/CreateGitConnector.module.scss
@@ -1,8 +1,5 @@
 .wrapper {
-  position: absolute;
-  height: 100%;
   width: 100%;
-  overflow: auto;
 
   div[class*='StepWizard---main'] {
     height: 100%;
